--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "echo \"Static site - no build step needed\"",
     "preview": "python3 -m http.server 8080",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "precalculate-images": "node scripts/preprocess-targets.js"
   },
   "keywords": [
     "game",
