--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,10 @@
     ],
     "rewrites": [
       {
+        "source": "/api/**",
+        "function": "detectPose"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
@@ -39,6 +43,18 @@
       }
     ]
   },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ]
+    }
+  ],
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
@@ -46,6 +62,9 @@
   "emulators": {
     "hosting": {
       "port": 5000
+    },
+    "functions": {
+      "port": 5001
     },
     "firestore": {
       "port": 8080
